<resources>
    <string name="app_name">Catalog Movie</string>
    <string name="now_playing">Movies</string>
    <string name="tv_show">Tv Show</string>
    <string name="dummy">Dummy</string>
    <string name="poster">Poster</string>
    <string name="banner">Banner</string>
    <string name="arrow">Arrow Left</string>
    <string name="overview">Overview</string>
    <string name="fav_movie">Favorite Movie</string>
    <string name="fav_tv">Favorite Tv Show</string>
    <string name="remove">Remove from favorite</string>
    <string name="added">Added to favorite</string>
</resources>